# qsp-wasm-engine

./: .eslintignore  .eslintrc.json  .gitignore  .npmignore  .tool-versions  CLAUDE.md  LICENSE  Readme.md  compile-wasm.sh  eslint.config.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/: index-debug.ts  index.ts  qsp-engine-browser.ts  qsp-engine-node.ts  qsp-wasm-browser.ts  qsp-wasm-node.ts  test-helpers.ts
src/contracts/: api.ts  common.ts  events.ts  wasm-module.ts
src/lib/: contracts.ts  pointers.ts  qsp-api.ts  qsp-engine-debug.ts  qsp-engine.ts  qsp-wasm.ts
src/qsplib/: CMakeLists.txt
src/qsplib/public/: qsp-engine-debug.d.ts  qsp-engine-debug.js  qsp-engine-debug.wasm  qsp-engine-debug.wasm.map  qsp-engine.js  qsp-engine.wasm  qsp-wasm.d.ts  qsp-wasm.js  qsp-wasm.wasm
src/qsplib/src/: qsp_wasm.c
tests/: acts.test.ts  api.test.ts  arrays.test.ts  base-functions.test.ts  code.test.ts  conditionals.test.ts  debug.test.ts  dynamic.test.ts  errors-to-test.md  errors.test.ts  exec.test.ts  expressions.test.ts  graphics.test.ts  index.test.ts  inputs.test.ts  labels.test.ts  locations.test.ts  loop.test.ts  main.test.ts  memory-leak.test.ts  menu.test.ts  modules.test.ts  msg.test.ts  objs.test.ts  sound.test.ts  stats.test.ts  strings.test.ts  system-locations.test.ts  time.test.ts  tuples.md  tuples.test.ts  variables.test.ts
tests/api/: api.test.ts  location-data-retrieval.test.ts  memory-leak.test.ts  variable-reading.test.ts
tests/engine/: acts.test.ts  arrays.test.ts  base-functions.test.ts  code.test.ts  conditionals.test.ts  debug.test.ts  dynamic.test.ts  exec.test.ts  expressions.test.ts  graphics.test.ts  inputs.test.ts  labels.test.ts  locations.test.ts  loop.test.ts  main.test.ts  menu.test.ts  modules.test.ts  msg.test.ts  objs.test.ts  sound.test.ts  stats.test.ts  strings.test.ts  system-locations.test.ts  time.test.ts  tuples.test.ts  variables.test.ts
